need to fix vertical align

--- a/app/app.css
+++ b/app/app.css
@@ -7,6 +7,17 @@
   /*padding-left: 200px;*/
 }
 
+/*.container {
+  position: relative;
+}
+
+.vmiddle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}*/
+
 .logo {
   text-align: center;
 }
@@ -17,7 +28,7 @@
   position: absolute;
   z-index: 100;
   height: 100vh;
-  width: 200px;
+  width: 25%;
   right: 0;
   top: 0;
   bottom: 0;
@@ -35,7 +46,7 @@
 
 .menu {
   position: relative;
-  width: 200px;
+  /*width: 25%;*/
   height: 100%;
 }
 
@@ -43,7 +54,7 @@
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%,-50%);
-  width: 200px;
+  /*width: 25%;*/
   height: auto;
 }
 
@@ -65,7 +76,7 @@
 }
 
 .icon-menu {
-  /*margin-top: 10%;*/
+  padding-top: 20%;
 }
 
 
